# GenesisEnergyAPI

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/genesisenergy_api/: __init__.py  __main__.py  api.py  auth.py  exceptions.py  model.py
tests/: test_instance.py
